<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent" android:layout_height="match_parent" android:background="#FFFAF0" android:gravity="center_horizontal" android:orientation="vertical" android:padding="40dp" tools:context=".DetailDataActivity">
    <ImageView android:layout_width="100dp" android:layout_height="100dp" android:layout_marginTop="30dp" android:src="@drawable/student"/>
    <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="40dp" android:orientation="vertical">
        <TextView android:id="@+id/text_view_nomor" android:layout_width="wrap_content" android:layout_height="wrap_content" android:drawableLeft="@drawable/ic_create_red_24dp" android:text="@string/nomor_detail" android:textSize="16sp"/>
        <TextView android:id="@+id/text_view_nomor_detail" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="20dp" android:text="@string/detail_value" android:textSize="20sp" android:textStyle="bold"/>
        <View android:layout_width="match_parent" android:layout_height="1dp" android:background="@color/colorAccent"/>
        <TextView android:id="@+id/text_view_nama" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="20dp" android:drawableLeft="@drawable/ic_group_red_24dp" android:text="@string/nama_detail" android:textSize="16sp"/>
        <TextView android:id="@+id/text_view_nama_detail" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="20dp" android:text="@string/detail_value" android:textSize="20sp" android:textStyle="bold"/>
        <View android:layout_width="match_parent" android:layout_height="1dp" android:background="@color/colorAccent"/>
        <TextView android:id="@+id/text_view_tanggal_lahir" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="20dp" android:drawableLeft="@drawable/ic_date_range_red_24dp" android:text="@string/tanggal_lahir_detail" android:textSize="16sp"/>
        <TextView android:id="@+id/text_view_tanggal_lahir_detail" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="20dp" android:text="@string/detail_value" android:textSize="20sp" android:textStyle="bold"/>
        <View android:layout_width="match_parent" android:layout_height="1dp" android:background="@color/colorAccent"/>
        <TextView android:id="@+id/text_view_jenis_kelamin" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="20dp" android:drawableLeft="@drawable/ic_person_red_24dp" android:text="@string/jenis_kelamin_detail" android:textSize="16sp"/>
        <TextView android:id="@+id/text_view_jenis_kelamin_detail" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="20dp" android:text="@string/detail_value" android:textSize="20sp" android:textStyle="bold"/>
        <View android:layout_width="match_parent" android:layout_height="1dp" android:background="@color/colorAccent"/>
        <TextView android:id="@+id/edit_text_alamat" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="20dp" android:drawableLeft="@drawable/ic_place_place_24dp" android:text="@string/alamat_detail" android:textSize="16sp"/>
        <TextView android:id="@+id/text_view_alamat_detail" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="20dp" android:text="@string/detail_value" android:textSize="20sp" android:textStyle="bold"/>
        <View android:layout_width="match_parent" android:layout_height="1dp" android:background="@color/colorAccent"/>
    </LinearLayout>
</LinearLayout>